name:               shcalaz
version:            0.0.1
license:            BSD3
license-file:       LICENSE
author:             Tony Morris <ʇǝu˙sıɹɹoɯʇ@ןןǝʞsɐɥ>
maintainer:         Tony Morris
copyright:          Tony Morris (c) 2017
synopsis:           Write Scala responsibly
category:           Language
description:        Write Scala responsibly
homepage:           https://github.com/scalaz/shcalaz
bug-reports:        https://github.com/scalaz/shcalaz/issues
cabal-version:      >= 1.10
build-type:         Custom
extra-source-files: changelog

source-repository   head
  type:             git
  location:         git@github.com:scalaz/shcalaz.git

flag                small_base
  description:      Choose the new, split-up base package.

library
  default-language:
                    Haskell2010

  build-depends:
                    base >= 4.8 && < 5        
                    , lens >= 4.15 && < 5
                    , papa >= 0.2.0 && < 1
                    , parsers >= 0.12 && < 1
                    
                   
  ghc-options:
                    -Wall

  default-extensions:
                    NoImplicitPrelude

  hs-source-dirs:
                    src

  exposed-modules:
                    Language.Scala
                    
test-suite doctests
  type:
                    exitcode-stdio-1.0

  main-is:
                    doctests.hs

  default-language:
                    Haskell2010

  build-depends:
                    base < 5 && >= 3
                    , doctest >= 0.9.7
                    , filepath >= 1.3
                    , directory >= 1.1
                    , QuickCheck >= 2.0
                    , template-haskell >= 2.8
                    , parsec >= 3.1 && < 4

  ghc-options:
                    -Wall
                    -threaded

  hs-source-dirs:
                    test
